--- a/deisgn.html
+++ b/deisgn.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="Eden Neave">
-    <title>WSOA3028A Website</title>
+    <title>Website Design</title>
 </head>
 <body>
     <header>
@@ -13,12 +12,14 @@
 
     <nav>
         <ul>
-            <li>Home</li>
+            <li><a href="mainMenu.html">Home</a></li>
             <li><a href="blogs.html">Blogs</a></li>
-            <li><a href="design.html"></a>Website Design</a></li>
+            <li>Website Design</li>
             <li><a href="essays.html">Essays</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
+            
+
         </ul>
     </nav>
+    <h1>Website Design</h1>
 </body>
-</html>
