--- a/essays.html
+++ b/essays.html
@@ -13,8 +13,10 @@
     <nav>
         <ul>
             <li><a href="mainMenu.html">Home</a></li>
-            <li><a href="blog.html">Blog</a></li>
+            <li><a href="blogs.html">Blogs</a></li>
+            <li><a href="design.html"></a>Website Design</a></li>
             <li>Essays</li>
+            <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
     </nav>
     <h1>Essays</h1>
