--- a/blog.html
+++ b/blog.html
@@ -12,9 +12,11 @@
 
     <nav>
         <ul>
-            <li><a href="mainMenu.html">Essays</a></li>
+            <li><a href="mainMenu.html">Home</a></li>
             <li>Blog</li>
+            <li><a href="design.html"></a>Website Design</a></li>
             <li><a href="essays.html">Essays</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
     </nav>
 
