--- a/essays.html
+++ b/essays.html
@@ -12,7 +12,7 @@
 
     <nav>
         <ul>
-            <li><a href="mainMenu.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="blogs.html">Blogs</a></li>
             <li><a href="design.html"></a>Website Design</a></li>
             <li>Essays</li>
