design site changes

--- a/deisgn.html
+++ b/deisgn.html
@@ -17,9 +17,9 @@
             <li>Website Design</li>
             <li><a href="essays.html">Essays</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            
-
         </ul>
     </nav>
+
     <h1>Website Design</h1>
 </body>
+</html>
