--- a/blogs.html
+++ b/blogs.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li>Blog</li>
-            <li><a href="design.html"></a>Website Design</a></li>
+            <li><a href="design.html">Website Design</a></li>
             <li><a href="essays.html">Essays</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
