--- a/essays.html
+++ b/essays.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="blogs.html">Blogs</a></li>
-            <li><a href="design.html"></a>Website Design</a></li>
+            <li><a href="design.html">Website Design</a></li>
             <li>Essays</li>
             <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
