--- a/index.html
+++ b/index.html
@@ -14,11 +14,13 @@
     <nav>
         <ul>
             <li>Home</li>
+            <li><a href="profile.html">Profile</a></li>
             <li><a href="blogs.html">Blogs</a></li>
             <li><a href="design.html">Website Design</a></li>
             <li><a href="essays.html">Essays</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
     </nav>
+    <h1>Home</h1>
 </body>
 </html>
