--- a/profile.html
+++ b/profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blogs</title>
+    <title>Portfolio</title>
 </head>
 <body>
     <header>
@@ -13,14 +13,13 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="profile.html">Profile</a></li>
-            <li>Blog</li>
+            <li>Profile</li>
+            <li><a href="blogs.html">Blogs</a></li>
             <li><a href="design.html">Website Design</a></li>
             <li><a href="essays.html">Essays</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
     </nav>
-
-    <h1>Blog Posts</h1>
+    <h1>Profile</h1>
 </body>
 </html>
