--- a/design.html
+++ b/design.html
@@ -13,6 +13,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="profile.html">Profile</a></li>
             <li><a href="blogs.html">Blogs</a></li>
             <li>Website Design</li>
             <li><a href="essays.html">Essays</a></li>
