--- a/essays.html
+++ b/essays.html
@@ -13,6 +13,7 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="profile.html">Profile</a></li>
             <li><a href="blogs.html">Blogs</a></li>
             <li><a href="design.html">Website Design</a></li>
             <li>Essays</li>
