Home, Profile, Essays, Portfolio done for Assign 1

--- a/essays.html
+++ b/essays.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>WSOA3028A Portfolio Website</h1>
+        <h1>Eden's Website</h1>
     </header>
 
     <nav>
@@ -20,6 +20,9 @@
             <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
     </nav>
-    <h1>Essays</h1>
+    <main>
+        <h1>Essays</h1>
+        <p>This will be my essays page that will include both essays I write in this course.</p>
+    </main>
 </body>
 </html>
