--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>WSOA3028A Portfolio Website</h1>
+        <h1>Eden's Website</h1>
     </header>
 
     <nav>
@@ -21,6 +21,9 @@
             <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
     </nav>
-    <h1>Home</h1>
+    <main>
+        <h1>Home</h1>
+        <p>This will be my home page with a brief introduction to the entire website.</p>
+    </main>
 </body>
 </html>
