--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>WSOA3028A Portfolio Website</h1>
+        <h1>Eden's Website</h1>
     </header>
 
     <nav>
@@ -20,6 +20,9 @@
             <li>Portfolio</li>
         </ul>
     </nav>
-    <h1>Portfolio</h1>
+    <main>
+        <h1>Portfolio</h1>
+        <p>This will be my portfolio page that includes my projects.</p>
+    </main>
 </body>
 </html>
