--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>WSOA3028A Portfolio Website</h1>
+        <h1>Eden's Website</h1>
     </header>
 
     <nav>
@@ -20,6 +20,10 @@
             <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
     </nav>
-    <h1>Profile</h1>
+    <main>
+        <h1>Profile</h1>
+        <p>This will be a my profile page that explores, well, me!</p>
+
+    </main>
 </body>
 </html>
