--- a/design.html
+++ b/design.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>WSOA3028A Portfolio Website</h1>
+        <h1>Eden's Website</h1>
     </header>
 
     <nav>
