--- a/design.html
+++ b/design.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="profile.html">Profile</a></li>
-            <li><a href="blogs.html">Blogs</a></li>
+            <li><a href="blogs/blogs.html">Blogs</a></li>
             <li>Website Design</li>
             <li><a href="essays.html">Essays</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
