--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <ul>
             <li>Home</li>
             <li><a href="profile.html">Profile</a></li>
-            <li><a href="blogs.html">Blogs</a></li>
+            <li><a href="blogs/blogs.html">Blogs</a></li>
             <li><a href="design.html">Website Design</a></li>
             <li><a href="essays.html">Essays</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
