--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="profile.html">Profile</a></li>
-            <li><a href="blogs.html">Blogs</a></li>
+            <li><a href="blogs/blogs.html">Blogs</a></li>
             <li><a href="design.html">Website Design</a></li>
             <li><a href="essays.html">Essays</a></li>
             <li>Portfolio</li>
