--- a/profile.html
+++ b/profile.html
@@ -14,7 +14,7 @@
         <ul>
             <li><a href="index.html">Home</a></li>
             <li>Profile</li>
-            <li><a href="blogs.html">Blogs</a></li>
+            <li><a href="blogs/blogs.html">Blogs</a></li>
             <li><a href="design.html">Website Design</a></li>
             <li><a href="essays.html">Essays</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
