--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -20,6 +20,7 @@
             <li><a href="../portfolio.html">Portfolio</a></li>
         </ul>
     </nav>
+    
     <main>
         <section class="Navigation-Back-To-Listed-Links">
             <article class="Back-to-Blogs-List">
@@ -51,7 +52,7 @@
 
                 <h4>The Library of Babel by Jorge Luis Borges</h4>
                 <p>“The Library of Babel” by Jorge Luis Borges (link) was written in 1941 and  is a very unique piece of writing. At first I found the reading quite confusing however after reading it a few times, drawing some visual representations of Borges theory and doing some external research it made much more sense. In my understanding, Borges explores an idea of having an infinite library of books of all kinds of lengths. Borges mentions, "The orthographical symbols are twenty-five in number." These symbols or characters include the comma and the period as well as the twenty two letters of the alphabet, making it twenty five in number. At first, I wondered why the author would only have twenty two letters instead of twenty six. The Jewish alphabet contains twenty two letters and so I think what the author is trying to imply is that the library contains characters that when placed together in very specific ways, a vast amount of information and knowledge can be shared. The article explores a metaphorical idea of a structure or library that is hexagonal in shape. The below image is how I understood his analogy. </p>
-                <img src="images/drawingBorges.png" alt="Image of a drawing representing Borges' library metaphor" title="Borges' Library Metaphor">
+                <img src="../images/drawingBorges.png" alt="Image of a drawing representing Borges' library metaphor" title="Borges' Library Metaphor">
                 <p>The narrator explains the chaotic nature of the library and how difficult it is to find meaningful books within it. The article raises questions about the nature of knowledge and how one attains it. It raises the question of how individuals will search for meaning in a seemingly random and limitless universe. Borges invites the reader to reflect on the vastness and complexity of information and the challenges of finding meaning in a sea of possibilities.</p>
                 <p>In this article Borges suggests that even with infinite information at one’s disposal, it may be purposeless to pursue knowledge. How, for example, is it possible for any person to sift through what information is factual or fictional, what has been manipulated or is real, what bears witness to the common good and enhances it vs what pollutes and draws away from the higher good? In my opinion Borges explains his metaphors in a very unique way that I think relate to the internet and the World Wide Web of today. The Web is an interconnected structure of ‘rooms’ with infinite ‘books’ of ‘characters’ and symbols that translate a vast amount of knowledge to individuals.</p>
                 <p>Borges and Bush both have speculative writings. These articles were written before the internet and the WWW but both writings have very relevant themes in these fields.</p>
