--- a/blogs/blog1.html
+++ b/blogs/blog1.html
@@ -20,9 +20,10 @@
             <li><a href="../portfolio.html">Portfolio</a></li>
         </ul>
     </nav>
-    
+
     <main>
         <section class="Navigation-Back-To-Listed-Links">
+            <h1>Blog Posts</h1>
             <article class="Back-to-Blogs-List">
                 <a href="blogs.html">Blog List</a>
             </article>
