--- a/design.html
+++ b/design.html
@@ -20,7 +20,108 @@
             <li><a href="portfolio.html">Portfolio</a></li>
         </ul>
     </nav>
+    <main>
+        <section class="Website-Designs">
+            <h1>Website Design</h1>
+            <article class="Website-Design-Content">
+                <h2>Folder Structure</h2>
+                <img src="images/folderStruct.png" alt="Image of folder structure with the root branching off into pages, index.html, images, css and JavaScript" title="Folder Structure" width="450" height="225">
 
-    <h1>Website Design</h1>
+                <h2>Wireframe Ideas</h2>
+                <img src="images/WF1.png" alt="Image of wireframe idea for the Home page" title="Home Page Wireframe" width="300" height="225">
+                <img src="images/WF2.png" alt="Image of wireframe idea for the Profile page" title="Profile Page Wireframe" width="300" height="225">
+                <img src="images/WF3.png" alt="Image of wireframe idea for the Blogs page" title="Blogs Page Wireframe" width="300" height="225">
+                <img src="images/WF4.png" alt="Image of wireframe idea for the Design page" title="Design Page Wireframe" width="300" height="225">
+                <img src="images/WF5.png" alt="Image of wireframe idea for the Essays page" title="Essays Page Wireframe" width="300" height="225">
+                <img src="images/WF6.png" alt="Image of wireframe idea for the Portfolio page" title="Portfolio Page Wireframe" width="300" height="225">
+
+
+                <h2>Inspirational Websites</h2>
+                <p>The following websites really caught my attention and all include a variety of aspects I would like to include in my portfolio website.</p>
+                <ul>
+                    <li><a href="https://www.christinavanessa.com/">https://www.christinavanessa.com/</a></li>
+                    <li> <a href="https://www.melyssagriffin.com/">https://www.melyssagriffin.com/</a></li>
+                    <li> <a href="https://the-goonies.webflow.io/">https://the-goonies.webflow.io/</a></li>
+                    <li> <a href="https://www.jackbromhead.com/">https://www.jackbromhead.com/</a></li>
+                    <li> <a href="https://jennadunford.github.io/PortfolioWebsite_2127324_InteractiveMedia/">https://jennadunford.github.io/PortfolioWebsite_2127324_InteractiveMedia/</a></li>
+                    <li> <a href="https://joshua-jandrell.github.io/JJ_Website/">https://joshua-jandrell.github.io/JJ_Website/</a></li>
+                    <li> <a href="https://seanobrien.com.au/">https://seanobrien.com.au/</a></li>
+                </ul>
+
+                <h2>Interface Elements</h2>
+                <ul>
+                    <li>Home Page
+                        <ul>
+                            <li>Users will be able to use the navigation buttons at the top of the page to go from any page to another. </li>
+                            <li>Users will be able to scroll down to see the entire page (content more focussed on the website). A scroll bar will visually represent how far a user is down the page. </li>
+                            <li>When you hover over images, brief information on the image will also be visible.</li>
+                            <li>Users will be able to click links to social media profiles and other contact information.</li>
+                        </ul>
+                    </li>
+
+                    <li>Profile
+                        <ul>
+                            <li>Users will be able to use the navigation buttons at the top of the page to go from any page to another. </li>
+                            <li>Users will be able to scroll down to see the entire page (content more focussed on me as an individual). A scroll bar will visually represent how far a user is down the page.</li>
+                            <li>When you hover over images, brief information on the image will also be visible.</li>
+                            <li>Users will be able to click links to social media profiles and other contact information.</li>
+                        </ul>
+                    </li>
+
+                    <li>Blogs
+                        <ul>
+                            <li>Users will be able to use the navigation buttons at the top of the page to go from any page to another. </li>
+                            <li>Users will be able to scroll down to see the entire page. A scroll bar will visually represent how far a user is down the page. </li>
+                            <li>Users will be able to see the first blog post and then be able to click to the next blog post. Users can only click on the previous blog post and the next blog post. However a button will be made available that can take you to any blog post.</li>
+                        </ul>
+                    </li>
+
+                    <li>Design
+                        <ul>
+                            <li>Users will be able to use the navigation buttons at the top of the page to go from any page to another. </li>
+                            <li>Users will be able to scroll down to see the entire page. A scroll bar will visually represent how far a user is down the page. </li>
+                            <li>Users will be able to hover over images with titles whereby they will increase in size and provide a flavour text. Once clicked the user will be taken to a more detailed section of the specific design. </li>
+                        </ul>
+                    </li>
+
+                    <li>Essays
+                        <ul>
+                            <li>Users will be able to use the navigation buttons at the top of the page to go from any page to another.</li>
+                            <li>Users will be able to scroll down to see the entire page. A scroll bar will visually represent how far a user is down the page. </li>
+                            <li>Users will be able to see the first essay and then be able to click to the next essay. Users can go back and forth to the respective essays through arrow buttons.</li>
+                        </ul>
+                    </li>
+
+                    <li>Portfolio
+                        <ul>
+                            <li>Users will be able to use the navigation buttons at the top of the page to go from any page to another. </li>
+                            <li>Users will be able to scroll down to see the entire page. A scroll bar will visually represent how far a user is down the page. </li>
+                            <li>Users will be able to hover over images with titles whereby they will increase in size and provide a flavour text. Once clicked the user will be taken to a more detailed section of the specific project. </li>
+                        </ul>
+                    </li>
+                </ul>
+
+                <h2>User Flow</h2>
+                <img src="images/userFlow.png" alt="Image of nodal points representing the different pages and arrows connecting nodes/pages that the user can link through" title="User Flow" width="350" height="380">
+
+                <h2>Information Structure</h2>
+                <img src="images/InfoStruct.png" alt="Image of information structure tree for the website" title="Information Structure" width="450" height="400">
+
+                <h2>Style Guide</h2>
+                <p>I used the <a href="https://htmlcolorcodes.com/color-picker/">Color Picker website</a> to find complementary and visually appealing colour combinations for a specific hex code I liked. The website provided the following colour guide which I would like to use in my website. I could use the following combinations in different sections of my blog and it would still appear aesthetically pleasing.</p>
+                <p>The following image is an analogous combination.</p>
+                <img src="images/Analogous.png" alt="Image of six colors that form an analogous combination" title="Analogous Combination" width="600" height="350">
+                <p>The following image is a tetradic combination.</p>
+                <img src="images/tetradic.png" alt="Image of four colors that form a tetradic combination" title="Tetradic Combination" width="600" height="170">
+                <p>The following image is a triadic combination.</p>
+                <img src="images/triadic.png" alt="Image of three colors that form a triadic combination" title="Triadic Combination" width="500" height="170">
+                <p>The following image is a neutral combination.</p>
+                <img src="images/neutral.png" alt="Image of six colors that form a neutral combination" title="Neutral Combination" width="600" height="350">
+                <p>I would like to stick to a legible and simple font and therefore I have chosen to use the Roboto font. </p>
+                <img src="images/Roboto.png" alt="Image of the words 'Hi, my name is Eden' in Roboto Font" title="Roboto Font" width="422" height="55">
+
+            </article>
+        </section>
+    </main>
 </body>
 </html>
