--- a/blogs/blog3.html
+++ b/blogs/blog3.html
@@ -23,6 +23,7 @@
 
     <main>
         <section class="Navigation-Back-To-Listed-Links">
+            <h1>Blog Posts</h1>
             <article class="Back-to-Blogs-List">
                 <a href="blogs.html">Blog List</a>
             </article>
