Final Assignment 1 Website

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <main>
         <h1>Home</h1>
         <p>This will be my home page with a brief introduction to the entire website.</p>
+        <img src="images/littleEden.jpg" alt="Image of the author of the website as a young girl" title="Author as Young Girl" width="400" height="550">
+
     </main>
 </body>
 </html>
